--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,10 @@
   {{>header}}
 
   <h1>{{title}}</h1>
+  <p>
+    This site was created by Max. It uses data from mapbox and darsky.net, node.js
+  </p>
+  <img src="/img/1.png" alt="img">
   <p>{{name}}</p>
 </div>
 
